--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,70 @@
-Flask==2.3.3
-flask-restx==1.1.0
-requests==2.31.0
-openai==0.28.1
+altair==5.5.0
+antlr4-python3-runtime==4.9.3
+attrs==25.3.0
+blinker==1.9.0
+cachetools==6.2.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+contourpy==1.3.3
+cycler==0.12.1
+easyocr==1.7.2
+filelock==3.19.1
+fonttools==4.59.1
+fsspec==2025.7.0
+gitdb==4.0.12
+gitpython==3.1.45
+idna==3.10
+imageio==2.37.0
+jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
+lazy-loader==0.4
+markupsafe==3.0.2
+matplotlib==3.10.5
+mpmath==1.3.0
+narwhals==2.2.0
+networkx==3.5
+ninja==1.13.0
+numpy==2.2.6
+omegaconf==2.3.0
+opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
+packaging==25.0
+pandas==2.3.2
+pillow==11.3.0
+protobuf==6.32.0
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pyarrow==21.0.0
+pyclipper==1.3.0.post6
+pydeck==0.9.1
+pyparsing==3.2.3
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyyaml==6.0.2
+pyzbar==0.1.9
+referencing==0.36.2
+requests==2.32.5
+rpds-py==0.27.0
+scikit-image==0.25.2
+scipy==1.16.1
+setuptools==80.9.0
+shapely==2.1.1
+six==1.17.0
+smmap==5.0.2
+streamlit==1.49.0
+sympy==1.14.0
+tenacity==9.1.2
+tifffile==2025.6.11
+toml==0.10.2
+torch==2.8.0
+torchvision==0.23.0
+tornado==6.5.2
+typing-extensions==4.15.0
+tzdata==2025.2
+ultralytics==8.3.186
+ultralytics-thop==2.0.16
+urllib3==2.5.0
