--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,11 @@
-# OpenAI API Configuration
+# Environment variables for AI Microservices
+
+# OpenAI API Key (required for LLM service)
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Service URLs (for development)
+# Service URLs (these will be set automatically in Docker Compose)
 YOLO_SERVICE_URL=http://yolo-service:7000
-OPENAI_SERVICE_URL=http://openai-service:9000
+LLM_SERVICE_URL=http://llm-service:9000
+
+# OpenAI Model (optional, defaults to gpt-4o-2024-11-20)
+OPENAI_MODEL=gpt-4o-2024-11-20
